# caae

./: .env.example  .gitignore  .~lock.CAAE.pptx#  CAAE.md  README.md  pyproject.toml
.opencode/: plan.md  review.md
configs/: mcp_config.json  workflow_policy.json
src/caae/: __init__.py  engine.py  graph.py  main.py
src/caae/api/: __init__.py  models.py
src/caae/api/routes/: health.py  sessions.py
src/caae/config/: __init__.py  loader.py
src/caae/mcp/: __init__.py  client_manager.py  models.py  transport.py
src/caae/models/: __init__.py  config.py  state.py
src/caae/models/schemas/: __init__.py  base.py  clinical.py  media.py
src/caae/nodes/: __init__.py  action_execution.py  cognitive_processing.py  context_assessor.py  deps.py  evaluation_gate.py  info_retrieval.py
src/caae/observability/: __init__.py  langfuse_handler.py
src/caae/validation/: __init__.py  deepeval_gates.py  schema_checker.py
src/caae_demo_server/: __init__.py  __main__.py  data.py  server.py
tests/: __init__.py  conftest.py
tests/integration/: test_api.py  test_demo_server.py  test_graph.py  test_mcp_integration.py
tests/regression/: __init__.py
tests/unit/: test_config_models.py  test_engine.py  test_mcp_client_manager.py  test_nodes.py  test_observability.py  test_schema_registry.py  test_state_model.py  test_validation.py
