[project]
name = "caae"
version = "0.1.0"
description = "Central Adaptable Automation Engine"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-openai>=0.3",
    "langchain-anthropic>=0.3",
    "mcp>=1.0",
    "pydantic>=2.0",
    "langfuse>=2.0,<5",
    "deepeval>=2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.scripts]
caae-server = "caae.main:run"
caae-demo-server = "caae_demo_server.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
# All sources are from PyPI by default

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (spawn real subprocesses, network, etc.)",
]

[dependency-groups]
dev = [
    "ruff>=0.15.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]
